// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginatedEstablishmentsTable renders correctly when is NOT loading 1`] = `
<DocumentFragment>
  <select>
    <option
      value=""
    >
      All Authorities
    </option>
    <option
      value="1"
    >
      Authority 1
    </option>
    <option
      value="2"
    >
      Authority 2
    </option>
    <option
      value="3"
    >
      Authority 3
    </option>
  </select>
  <table>
    <thead>
      <tr>
        <th />
        <th
          style="padding-bottom: 10px; text-align: left; font-size: 20px;"
        >
          Business Name
        </th>
        <th
          style="padding-bottom: 10px; text-align: left; font-size: 20px;"
        >
          Rating Value
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        style="font-size: 20px;"
      >
        <td>
          <input
            type="checkbox"
          />
        </td>
        <td>
          <a
            data-discover="true"
            href="/22999/details"
          >
            Joe
          </a>
        </td>
        <td>
          5
        </td>
      </tr>
      <tr
        style="font-size: 20px;"
      >
        <td>
          <input
            type="checkbox"
          />
        </td>
        <td>
          <a
            data-discover="true"
            href="/67890/details"
          >
            Habib
          </a>
        </td>
        <td>
          4
        </td>
      </tr>
      <tr
        style="font-size: 20px;"
      >
        <td>
          <input
            type="checkbox"
          />
        </td>
        <td>
          <a
            data-discover="true"
            href="/09888/details"
          >
            Mc Hogwarts
          </a>
        </td>
        <td>
          3
        </td>
      </tr>
    </tbody>
  </table>
  <nav>
    <button
      disabled=""
      style="margin: 0px 5px;"
      type="button"
    >
      -
    </button>
    1
    <button
      style="margin: 0px 5px;"
      type="button"
    >
      +
    </button>
  </nav>
</DocumentFragment>
`;

exports[`PaginatedEstablishmentsTable renders correctly when is loading 1`] = `
<DocumentFragment>
  <select>
    <option
      value=""
    >
      All Authorities
    </option>
    <option
      value="1"
    >
      Authority 1
    </option>
    <option
      value="2"
    >
      Authority 2
    </option>
    <option
      value="3"
    >
      Authority 3
    </option>
  </select>
  <table>
    <thead>
      <tr>
        <th />
        <th
          style="padding-bottom: 10px; text-align: left; font-size: 20px;"
        >
          Business Name
        </th>
        <th
          style="padding-bottom: 10px; text-align: left; font-size: 20px;"
        >
          Rating Value
        </th>
      </tr>
      <tr>
        <th
          colspan="2"
        >
          <div>
            Loading...
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        style="font-size: 20px;"
      >
        <td>
          <input
            type="checkbox"
          />
        </td>
        <td>
          <a
            data-discover="true"
            href="/22999/details"
          >
            Joe
          </a>
        </td>
        <td>
          5
        </td>
      </tr>
      <tr
        style="font-size: 20px;"
      >
        <td>
          <input
            type="checkbox"
          />
        </td>
        <td>
          <a
            data-discover="true"
            href="/67890/details"
          >
            Habib
          </a>
        </td>
        <td>
          4
        </td>
      </tr>
      <tr
        style="font-size: 20px;"
      >
        <td>
          <input
            type="checkbox"
          />
        </td>
        <td>
          <a
            data-discover="true"
            href="/09888/details"
          >
            Mc Hogwarts
          </a>
        </td>
        <td>
          3
        </td>
      </tr>
    </tbody>
  </table>
  <nav>
    <button
      disabled=""
      style="margin: 0px 5px;"
      type="button"
    >
      -
    </button>
    1
    <button
      style="margin: 0px 5px;"
      type="button"
    >
      +
    </button>
  </nav>
</DocumentFragment>
`;
